# ws-example

api/: app.py  main.py  pyproject.toml
web/: index.html
