[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Hunter Henrichsen <hunter.henrichsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
